# sbomberproject

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  base_logger.hpp  bomb.cpp  bomb.h  bomb_const_iterator.cpp  bomb_const_iterator.h  bomb_decorator.cpp  bomb_decorator.h  command.hpp  destroyable_ground_object.h  drop_bomb_command.cpp  drop_bomb_command.h  dynamic_object.h  file_logger_singletone.cpp  file_logger_singletone.h  game_object.h  global.cpp  global.h  ground.cpp  ground.h  house.cpp  house.h  level_gui.cpp  level_gui.h  my_tools.cpp  my_tools.h  object_deleter.h  plane.cpp  plane.h  proxy_logger.cpp  proxy_logger.h  sbomber.cpp  sbomber.h  sbomber_project.cpp  tank.cpp  tank.h  (+4 more)
